	- Also randomize the outgoing port range for tests.
	- If query list is full, will stop selecting listening ports for read.
	  This makes all threads service incoming requests, instead of one.
	  No memory is leaking during reloads, service of queries, etc.
	- test that uses ldns-testns -f to test threading. Have to answer
	  three queries at the same time.

26 February 2007: Wouter
	- ub_random code used to select ID and port.
	- log code prints thread id.
	- unbound can thread itself, with reload(HUP) and quit working
	  correctly.
	- don't open pipes for #0, doesn't need it.
	- listens to SIGTERM, SIGQUIT, SIGINT (all quit) and SIGHUP (reload).

23 February 2007: Wouter
	- Can do reloads on sigHUP. Everything is stopped, and freed,
	  except the listening ports. Then the config file is reread.
	  And everything is started again (and listening ports if needed).
	- Ports for queries are shared.
	- config file added interface:, chroot: and username:.
	- config file: directory, logfile, pidfile. And they work too.
	- will daemonize by default now. Use -d to stay in the foreground.
	- got BSD random[256 state] code, made it threadsafe. util/random.

22 February 2007: Wouter
	- Have a config file. Removed commandline options, moved to config.
	- tests use config file.

21 February 2007: Wouter
	- put -c option in man page.
	- minievent fd array capped by FD_SETSIZE.

20 February 2007: Wouter
	- Added locks code and pthread spinlock detection.
	- can use no locks, or solaris native thread library.
	- added yacc and lex configure, and config file parsing code.
	  also makedist.sh, and manpage.
	- put include errno.h in config.h

19 February 2007: Wouter
	- Created 0.0 svn tag.
	- added acx_pthread.m4 autoconf check for pthreads from 
	  the autoconf archive. It is GPL-with-autoconf-exception Licensed.
	  You can specify --with-pthreads, or --without-pthreads to configure.

16 February 2007: Wouter
	- Updated testbed script, works better by using make on remote end.